styling section-hero

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
        <a href="#">View plans</a> 
     </div>
     <div class="image-side">
-
+<img src="./images/image-intro-desktop.jpg" alt="">
     </div>
   </section>
   <section id="why-us">
